Add heath check
